# docs/wtc/swagger.json
@@ -4,21 +4,90 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server server.",
-        "title": "Echo Swagger Example API",
+        "description": "Account service for WTC.",
+        "title": "WTC ACCOUNT SERVICE",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "email": "miskadl09@gmail.com"
         },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "version": "0.4+040120221154"
     },
-    "host": "localhost:3000",
-    "basePath": "/",
-    "paths": {}
+    "host": "localhost:9000",
+    "basePath": "/api/v1",
+    "paths": {
+        "/register": {
+            "post": {
+                "description": "register new profile to be able to use WTC.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "register new profile in WTC system",
+                "parameters": [
+                    {
+                        "description": "hello string",
+                        "name": "CreateProfileModel",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/model.CreateProfileRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.RegProfileResponseOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.RegProfileResponseFailure"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "model.CreateProfileRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.RegProfileResponseFailure": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "description": "A response returned from the server.\ne.g. \"No records were found\"",
+                    "type": "string"
+                }
+            }
+        },
+        "model.RegProfileResponseOK": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "description": "A response returned from the server.\ne.g. \"Successfully registered\"",
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
